k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatflow-service
spec:
  selector:
    app: chatflow-server
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
